Modificacion de servicios para el registro de saldos iniciales